# excafe_benchmarks

./: .gitignore  README  benchmark.mk.in  bootstrap  configure.ac
common/: benchmark.cpp.tmpl  benchmark.cpp.tmpl.old  generate_ufl_rules.sh
laplacian_2d/: Makefile  laplacian_f0.tmpl  laplacian_f1.tmpl  laplacian_f1_p1_q1_excafe.h  laplacian_f1_p1_q1_quadrature.h  laplacian_f1_p1_q1_tensor.h  laplacian_f1_p1_q2_excafe.h  laplacian_f1_p1_q2_quadrature.h  laplacian_f1_p1_q2_tensor.h  laplacian_f1_p1_q3_excafe.h  laplacian_f1_p1_q3_quadrature.h  laplacian_f1_p1_q3_tensor.h  laplacian_f1_p1_q4_excafe.h  laplacian_f1_p1_q4_quadrature.h  laplacian_f1_p1_q4_tensor.h  laplacian_f1_p2_q1_excafe.h  laplacian_f1_p2_q1_quadrature.h  laplacian_f1_p2_q1_tensor.h  laplacian_f1_p2_q2_excafe.h  laplacian_f1_p2_q2_quadrature.h  laplacian_f1_p2_q2_tensor.h  laplacian_f1_p2_q3_excafe.h  laplacian_f1_p2_q3_quadrature.h  laplacian_f1_p2_q3_tensor.h  laplacian_f1_p2_q4_excafe.h  laplacian_f1_p2_q4_quadrature.h  laplacian_f1_p2_q4_tensor.h  laplacian_f1_p3_q1_excafe.h  laplacian_f1_p3_q1_quadrature.h  laplacian_f1_p3_q1_tensor.h  laplacian_f1_p3_q2_excafe.h  laplacian_f1_p3_q2_quadrature.h  laplacian_f1_p3_q2_tensor.h  laplacian_f1_p3_q3_excafe.h  laplacian_f1_p3_q3_quadrature.h  laplacian_f1_p3_q3_tensor.h  laplacian_f1_p3_q4_excafe.h  laplacian_f1_p3_q4_quadrature.h  laplacian_f1_p3_q4_tensor.h  laplacian_f2.tmpl  (+51 more)
mass_matrix_2d/: Makefile  Makefile.in  benchmark.cpp.tmpl  benchmark.cpp.tmpl.old  count_instructions  generate_ufl_rules.sh  make_table_norms  make_table_performance  mass_matrix_f0.tmpl  mass_matrix_f1.tmpl  (+113 more)
(+59 files in other folders)
